# AetherOS-Human-Centric-Voice-AI-Agent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  requirements.txt  run_integration_test.py
api-gateway/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  verify.sh
api-gateway/api_gateway.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api-gateway/app/: __init__.py  auth.py  config.py  main.py  rate_limiter.py  websocket.py
api-gateway/app/grpc_clients/: __init__.py
api-gateway/app/routers/: __init__.py  agent_router.py  executor_router.py  health_router.py  memory_router.py  voice_router.py
api-gateway/tests/: conftest.py  test_basic.py
browser-executor/: Cargo.toml  README.md  verify.sh
browser-executor/src/: actions.rs  executor.rs  lib.rs  main.rs  sandbox.rs  screenshot.rs
browser-executor/tests/: integration_test.rs
context-manager/: Dockerfile
desktop-client/: .gitignore  README.md  electron-builder.yml  index.html  package.json  tailwind.config.js  tsconfig.electron.json  tsconfig.json  vite.config.ts
desktop-client/electron/: main.ts  preload.ts  tray.ts
desktop-client/electron/audio/: microphone.ts  player.ts
desktop-client/public/assets/icons/: .gitkeep
desktop-client/public/assets/sounds/: .gitkeep
desktop-client/src/: App.tsx  index.css
desktop-client/src/components/: ChatWindow.tsx  MemoryViewer.tsx  SettingsPanel.tsx  StatusIndicator.tsx  VoiceVisualizer.tsx
desktop-client/src/hooks/: useMemory.ts  useVoiceRecording.ts  useWebSocket.ts
desktop-client/src/services/: api.ts  audio.ts  websocket.ts
desktop-client/src/store/: appStore.ts
function-executor/: Dockerfile
integration/: .env.example  README.md  integration_test.py  requirements.txt
integration-tests/: README.md  conftest.py  generate_test_audio.py  requirements.txt  run_tests.bat  run_tests.sh  test_m2_m10_integration.py
integration-tests-phase2/: README.md  debug_email.py  debug_highrisk_rate.py  debug_mappings.py  debug_ratelimit.py  debug_risk.py  debug_thresholds.py  requirements.txt  test_comprehensive.py  test_fixes.py  test_integration.py  test_minimal.py  test_simple.py
integration-tests-phase3/: README.md  run_all_tests.py  test_full_pipeline.py  test_m6_to_m7.py  test_m6_to_m8.py  test_m6_to_m9.py  test_report.json
integration/config/: integration_config.yaml
intent-classifier/: Dockerfile  Readme.md  main.py  requirements.txt  verify.py
intent-classifier/app/: __init__.py  classifier.py  entities.py  intents.py  patterns.py
llm-service/: Dockerfile
memory-service/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
memory-service/app/: __init__.py  config.py  database.py  main.py  models.py  privacy.py  retention.py  schemas.py
memory-service/app/routers/: __init__.py  dashboard_router.py  episodic_router.py  long_term_router.py  short_term_router.py
memory-service/app/stores/: __init__.py  episodic.py  long_term.py  short_term.py
memory-service/tests/: load_test.py
orchestrator/: Dockerfile
orchestrator/app/: main.py
os-executor/: Cargo.toml  README.md  verify.sh
os-executor/src/: executor.rs  lib.rs  main.rs  platform.rs  sandbox.rs  whitelist.rs
prompt-builder/: Dockerfile
reasoning-engine/: Dockerfile  README.md  pyproject.toml  requirements.txt  test_planner.py  verify.py
reasoning-engine/app/: __init__.py  context_builder.py  llm_client.py  main.py  planner.py  tool_selector.py
reasoning-engine/prompts/: system_prompt.txt
safety-validator/: README.md  pyproject.toml  requirements.txt  verify.py
safety-validator/app/: __init__.py  allow_lists.py  risk_scorer.py  sanitizers.py  validator.py
safety-validator/config/: policies.yaml
safety-validator/tests/: test_adversarial.py  test_validator.py
scripts/: start_integration_test.bat  start_integration_test.sh
search-executor/: README.md  requirements.txt  verify.py
search-executor/app/: __init__.py  cache.py  content_fetcher.py  parser.py  search_client.py
search-executor/config/: .env.example
search-executor/tests/: test_cache.py  test_parser.py  test_search_client.py
stt-processor/: Cargo.toml  Dockerfile  README.md
stt-processor/benches/: transcription_bench.rs
stt-processor/models/: README.md
stt-processor/src/: audio_preprocessor.rs  lib.rs  main.rs  streaming.rs  whisper_wrapper.rs  whisper_wrapper_old.rs
stt-processor/tests/: integration_test.rs
stt-service/: Dockerfile
tool-registry/: Dockerfile
tts-service/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  download_models.py  download_piper.sh  pyproject.toml  requirements.txt
tts-service/app/: __init__.py  config.py  main.py  schemas.py  synthesizer.py  voice_cache.py
tts-service/models/: README.md
tts-service/tests/: __init__.py  conftest.py  load_test.py  test_api.py  test_cache.py  test_performance.py  test_synthesizer.py
wakeword-detector/: .gitignore  Cargo.toml  README.md
wakeword-detector/models/: README.md
wakeword-detector/src/: audio_buffer.rs  detector.rs  lib.rs  main.rs  vad.rs
wakeword-detector/tests/: integration_test.rs
