[package]
name = "browser-executor"
version = "1.0.0"
edition = "2021"
authors = ["AetherOS Team"]
description = "Secure browser automation executor with sandboxing"

[dependencies]
# Browser automation
chromiumoxide = "0.5"
async-trait = "0.1"
futures = "0.3"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image handling (screenshots)
base64 = "0.21"
image = "0.24"

# Process management
nix = { version = "0.27", features = ["process", "signal"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL parsing
url = "2.5"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.8"

[lib]
name = "browser_executor"
path = "src/lib.rs"

[[bin]]
name = "browser-executor"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
