[package]
name = "os-executor"
version = "1.0.0"
edition = "2021"
authors = ["AetherOS Team"]
description = "Secure OS command executor with sandboxing and whitelisting"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Security
nix = { version = "0.27", features = ["user", "process"] }

# Configuration
once_cell = "1.19"
regex = "1.10"

# Process management
libc = "0.2"
which = "6.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["user", "process", "signal"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winbase"] }

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"

[[bin]]
name = "os-executor"
path = "src/main.rs"

[lib]
name = "os_executor"
path = "src/lib.rs"
