[package]
name = "stt-processor"
version = "0.1.0"
edition = "2021"
authors = ["AetherOS Team"]
description = "Speech-to-Text processor for AetherOS using Whisper.cpp"

[dependencies]
# Whisper integration
whisper-rs = { version = "0.15", optional = true }  # OpenAI Whisper bindings

# Audio processing
hound = "3.5"                          # WAV file I/O
rubato = "0.15"                        # High-quality resampling
dasp = "0.11"                          # Digital audio signal processing

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
bytes = "1.5"
parking_lot = "0.12"                   # Faster mutexes
num_cpus = "1.16"                      # CPU core detection

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# Testing
[dev-dependencies]
approx = "0.5"
tempfile = "3.8"
criterion = "0.5"                      # Benchmarking
test-case = "3.3"                      # Parameterized tests

[lib]
name = "stt_processor"
path = "src/lib.rs"

[[bin]]
name = "stt-service"
path = "src/main.rs"

[[bench]]
name = "transcription_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

[features]
default = []
whisper = ["whisper-rs"]  # Enable real Whisper.cpp integration
