[tool.poetry]
name = "tts-service"
version = "0.1.0"
description = "AetherOS TTS Synthesizer - Natural speech generation service"
authors = ["AetherOS Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
TTS = "^0.22.0"  # Coqui TTS
torch = "^2.1.2"
torchaudio = "^2.1.2"
numpy = "^1.26.3"
soundfile = "^0.12.1"
librosa = "^0.10.1"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
diskcache = "^5.6.3"
httpx = "^0.26.0"
pydub = "^0.25.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^24.1.1"
ruff = "^0.1.14"
mypy = "^1.8.0"
httpx = "^0.26.0"
nisqa = "^0.1.0"  # NISQA quality assessment

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
