[package]
name = "wakeword-detector"
version = "0.1.0"
edition = "2021"
authors = ["AetherOS Team"]
description = "Wake-word detection service for AetherOS using Porcupine SDK"

[dependencies]
# Audio processing
cpal = "0.15"                          # Cross-platform audio I/O
ringbuf = "0.4"                        # Lock-free ring buffer
hound = "3.5"                          # WAV file reading/writing
cache-padded = "1.3"                   # Cache-aligned padding for atomics

# Porcupine wake-word detection
# Note: Using optional dependency for testing without SDK
# pv_porcupine = { version = "2.2", optional = true }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization (for config)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Testing utilities
[dev-dependencies]
approx = "0.5"                         # Float comparison in tests
mockall = "0.12"                       # Mocking framework
tempfile = "3.8"                       # Temporary files for tests

[lib]
name = "wakeword_detector"
path = "src/lib.rs"

[[bin]]
name = "wakeword-service"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
